--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21327,3 +21327,50 @@ span.tag-color {
   border-radius: 100%;
 }
 
+header.guest-home {
+  height: 60px;
+  background-color: #fff;
+  color: #636b6f;
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+  margin: 0;
+}
+
+header.guest-home .flex-center {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+header.guest-home .position-ref {
+  position: relative;
+}
+
+header.guest-home .top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
+header.guest-home .content {
+  text-align: center;
+}
+
+header.guest-home .title {
+  font-size: 84px;
+}
+
+header.guest-home .links > a {
+  color: #636b6f;
+  padding: 0 25px;
+  font-size: 13px;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+header.guest-home .m-b-md {
+  margin-bottom: 30px;
+}
+
