--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,15 +40,17 @@ span.tag-color{
     height: 20px;
     border-radius: 100%;
 }
+div.guest-home-container{
+    background-color: black;
 
-header.guest-home{
+    header.guest-home{
 
-        height: 60px;
-        background-color: #fff;
-        color: #636b6f;
+        height: 80px;
+        color: white;
         font-family: 'Nunito', sans-serif;
         font-weight: 200;
         margin: 0;
+        padding-top: 20px;
 
     .flex-center {
         align-items: center;
@@ -63,7 +65,7 @@ header.guest-home{
     .top-right {
         position: absolute;
         right: 10px;
-        top: 18px;
+        top: 38px;
     }
 
     .content {
@@ -75,7 +77,7 @@ header.guest-home{
     }
 
     .links>a {
-        color: #636b6f;
+        color: white;;
         padding: 0 25px;
         font-size: 13px;
         font-weight: 600;
@@ -87,5 +89,7 @@ header.guest-home{
     .m-b-md {
         margin-bottom: 30px;
     }
+
+}
 
 }
